--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">    
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>meus objetivos do ano </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="conteudo-principal"></section>
+    <h2 class="conteudo-principal">
+<div class="titulo-principal"></div>
+    
 </body>
 </html>
