--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>meus objetivos do ano </title>
     <link rel="stylesheet" href="style.css">
-</head>
+ </head>
 <body>
-    <section class="conteudo-principal"></section>
-    <h2 class="conteudo-principal">
-<div class="titulo-principal"></div>
-    
-</body>
-</html>
+    <section class="conteudo-principal">
+      <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
+      <div class="botoes">
+        <button class="botao">Cursos na Alura</button>
+        <button class="botao">Criar projetos em JavaScript</button>
+        <button class="botao">Criar um portfólio</button>
+        <button class="botao">Atualizar meu currículo</button>
+      </div>
+    </section>
+  </body>
+  </html>
+   
