--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <section class="conteudo-principal">
       <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+      <div class="conteudo"></div>
       <div class="botoes">
         <button class="botao ativo">Cursos na Alura</button>
         <button class="botao">Criar projetos em JavaScript</button>
@@ -31,9 +32,10 @@
   </div class="aba-conteudo">
        <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da alura</h3>
        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-  </div>
-</div>
-    </section>
+       </div>
+    </div>
+ </div>
+</section>
     <script src="main.js"></script>
   </body>
   </html>
